# deds-project-1

./: .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  dprint.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: table-mappings.json
docker/data-warehouse/: Dockerfile  init.sql
docker/mappings/: Dockerfile  init.sql
docker/northwind/: Dockerfile  entrypoint.sh  init.sh
docker/staging-area/: Dockerfile  init.pgsql  init.sql
notebooks/: load_in_staging_area.ipynb  load_in_warehouse.ipynb  map_relations.ipynb  transform_and_load_northwind.ipynb
scripts/: prepare-kernel.sh
