[project]
name = "deds-project-1"
version = "0.0.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[tool.poetry]
package-mode = false
