[project]
name = "deds-project-1"
version = "0.0.0"
description = ""
authors = [
  { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyodbc (>=5.2.0,<6.0.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "mysql-connector-python (>=9.2.0,<10.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pre-commit = "^4.2.0"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 120
